--- a/index.css
+++ b/index.css
@@ -117,6 +117,41 @@ p {
   margin: var(--spacing-md) 0;
 }
 
+/* Layout Styles */
+.section-container {
+  max-width: var(--standard-width);
+  padding: 0 var(--spacing-md);
+}
+
+.two-column {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
+
+.two-column > .col-left {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 var(--spacing-md) 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.two-column > .col-right {
+  width: 50%;
+  box-sizing: border-box;
+  padding: 0 0 0 var(--spacing-md);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
 a:hover {
   color: var(--primary-accent);
 }
