--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@ body {
 
 main {
   width: 100%;
+  margin: var(--spacing-xl) 0 0 0;
 }
 
 h1 {
@@ -293,9 +294,6 @@ a:hover {
 }
 
 /* HERO STYLES */
-main {
-  margin: var(--spacing-xl) 0;
-}
 .button-container {
   display: flex;
   flex-direction: row;
@@ -354,6 +352,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
+  background-color: var(--bg-light);
 }
 
 .unified-platform-section h2 {
@@ -375,6 +374,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
+  background-color: var(--bg-light);
 }
 
 .graphic-grid {
@@ -414,10 +414,25 @@ main {
 /* Integration Section Styles */
 .integrations-section {
   color: var(--text-light);
-  background-color: var(--primary-accent);
+  /* background-color: var(--primary-accent); */
   width: 100%;
   display: flex;
   justify-content: center;
+  position: relative;
+  padding: calc(var(--spacing-xl) * 3) 0;
+  z-index: 1;
+}
+
+.integrations-section::before {
+  content: "";
+  width: 100%;
+  height: 1100px;
+  background-color: var(--primary-accent);
+  position: absolute;
+  top: -32px;
+  left: 0;
+  z-index: -1;
+  transform: skewY(-10deg);
 }
 
 .integrations-section .primary-button {
@@ -459,6 +474,7 @@ main {
   width: 100%;
   display: flex;
   justify-content: center;
+  padding: calc(var(--spacing-xl) * 3) 0;
 }
 
 .why-swipe-section .card-container {
@@ -479,13 +495,25 @@ main {
 
 /* GLOBAL SECTION */
 .global-section {
-  background-color: var(--primary-accent);
+  /* background-color: var(--primary-accent); */
   width: 100%;
   display: flex;
   justify-content: center;
   color: var(--text-light);
   position: relative;
-  padding: calc(var(--spacing-xl) * 3) 0;
+  padding: calc(var(--spacing-xl) * 3) 0 0 0;
+}
+
+.global-section::before {
+  content: "";
+  width: 100%;
+  height: 1200px;
+  background-color: var(--primary-accent);
+  position: absolute;
+  top: -32px;
+  left: 0;
+  transform: skewY(-10deg);
+  z-index: -1;
 }
 
 .global-section a {
@@ -526,6 +554,17 @@ main {
   display: flex;
   justify-content: center;
   padding: calc(var(--spacing-xl) * 2) 0;
+  position: relative;
+}
+
+.virtual-events-section::before {
+  content: "";
+  background-color: var(--bg-white);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -1;
 }
 
 .virtual-events-section .primary-button {
@@ -646,4 +685,60 @@ main {
 .getting-started-section .col-right .card .secondary-button {
   color: var(--purple-2);
   padding-left: 0;
+}
+
+/* FOOTER STYLES */
+.footer {
+  display: flex;
+  justify-content: center;
+  background-color: var(--bg-light);
+  padding: var(--spacing-xl) 0;
+}
+
+#footer-logo {
+  max-width: 108px;
+  margin: 0 0 var(--spacing-md) 0;
+}
+
+.footer .section-container {
+  width: 100%;
+  display: flex;
+}
+
+.footer .col {
+  width: 25%;
+}
+
+.footer .col ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer .col ul li {
+  margin: var(--spacing-md) 0;
+}
+
+.footer .col a {
+  color: var(--text-dark);
+  font-weight: normal;
+}
+
+.footer .col a:hover {
+  color: var(--purple-1);
+  text-decoration: underline;
+}
+
+.footer .icon-link {
+  display: flex;
+  align-items: center;
+  margin: var(--spacing-md) 0;
+}
+
+.footer .icon-link img {
+  width: 24px;
+}
+
+.footer h3 {
+  font-size: var(--h6-size);
+  font-weight: 700;
 }
