desktop view complete

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   --text-light: #fff;
   --text-grey: #adbdcc;
   --body-font: "Roboto", sans-serif;
-  --heading-font: "Anek Latin", sans-serif;
+  --heading-font: "Anek Telugu", sans-serif;
   --h1-size: 94px;
   --h1-height: 108px;
   --h2-size: 50px;
@@ -51,12 +51,13 @@ body {
   width: 100%;
   margin: 0;
   box-sizing: border-box;
-  padding: var(--spacing-sm);
+  padding: var(--spacing-sm) 0 0 0;
   background-color: var(--bg-white);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 main {
@@ -73,7 +74,6 @@ h1 {
   letter-spacing: -1px;
   line-height: var(--h1-height);
 }
-
 h2 {
   font-family: var(--heading-font);
   font-weight: 600;
@@ -81,7 +81,6 @@ h2 {
   margin: 0;
   width: 100%;
 }
-
 h3 {
   font-family: var(--heading-font);
   font-weight: 500;
@@ -122,17 +121,19 @@ a {
   transition: color 0.25s ease;
 }
 
+a:hover {
+  color: var(--primary-accent);
+}
 p {
   font-size: var(--p-size);
   line-height: var(--p-height);
   font-weight: 400;
   margin: var(--spacing-md) 0;
 }
-
-/* Layout Styles */
+/* Layout Styles  */
 .section-container {
+  width: 100%;
   max-width: var(--standard-width);
-  padding: 0 var(--spacing-md);
 }
 
 .two-column {
@@ -164,10 +165,6 @@ p {
   justify-content: center;
 }
 
-a:hover {
-  color: var(--primary-accent);
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -175,7 +172,6 @@ a:hover {
   align-items: flex-start;
   padding: var(--spacing-sm) var(--spacing-md) var(--spacing-sm) 0;
 }
-
 .card .icon {
   height: 50px;
   margin: 0 0 var(--spacing-sm) 0;
@@ -194,10 +190,9 @@ a:hover {
   color: var(--purple-1);
   font-family: var(--heading-font);
   font-weight: 500;
-  font-size: var(--subtitle-height);
+  font-size: var(--subtitle-size);
   line-height: var(--subtitle-height);
 }
-
 .subtitle2 {
   color: var(--blue-1);
 }
@@ -215,8 +210,8 @@ a:hover {
   letter-spacing: 1.25px;
   font-weight: bold;
   border-radius: 20px;
-  background-color: var(--primary-accent);
   border: none;
+  background-color: var(--primary-accent);
   color: var(--text-light);
   padding: var(--spacing-sm) var(--spacing-md);
   transition: all 0.15s ease;
@@ -226,15 +221,14 @@ a:hover {
   background-color: var(--primary-button-hover);
   cursor: pointer;
 }
-
 .secondary-button {
   font-family: var(--body-font);
   font-size: var(--button-size);
   letter-spacing: 1.25px;
   font-weight: bold;
   border-radius: 20px;
-  background-color: transparent;
   border: none;
+  background-color: transparent;
   color: var(--primary-accent);
   transition: all 0.15s ease;
 }
@@ -249,16 +243,15 @@ a:hover {
   justify-content: center;
   align-items: center;
 }
-
 .with-icon > img {
   transition: transform 0.25s ease;
 }
-
 .with-icon:hover > img {
   transform: translateX(4px);
 }
 
 /* NAVBAR */
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -266,8 +259,8 @@ a:hover {
   width: 100%;
   max-width: var(--standard-width);
   padding: 0 var(--spacing-md);
+  margin: 0 0 var(--spacing-xl) 0;
 }
-
 .menu {
   display: flex;
   list-style: none;
@@ -284,7 +277,6 @@ a:hover {
 .menu a:hover {
   text-decoration: underline;
 }
-
 .navbar-button {
   background: rgba(250, 250, 250, 0.25);
 }
@@ -293,10 +285,26 @@ a:hover {
   background: rgba(250, 250, 250, 0.5);
 }
 
+/* ANIMATED GRADIENT  */
+
+#gradient-canvas {
+  width: 200%;
+  height: 970px;
+  transform: rotate(-10deg);
+  position: absolute;
+  top: -600px;
+  left: -50%;
+  z-index: -1;
+  --gradient-color-1: #ef008f;
+  --gradient-color-2: #6ec3f4;
+  --gradient-color-3: #7038ff;
+  --gradient-color-4: #ffba27;
+}
+
 /* HERO STYLES */
+
 .button-container {
   display: flex;
-  flex-direction: row;
   margin: var(--spacing-md) 0;
 }
 
@@ -331,7 +339,6 @@ a:hover {
   display: flex;
   justify-content: center;
 }
-
 .partners-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -345,8 +352,8 @@ a:hover {
   height: 60px;
   place-self: center;
 }
+/* UNIFIED PLATFORM SECTION */
 
-/* Unified Platform Section */
 .unified-platform-section {
   padding: var(--spacing-xl) 0;
   width: 100%;
@@ -364,19 +371,18 @@ a:hover {
   background-color: var(--purple-1);
   margin: var(--spacing-md) 0;
 }
-
 .unified-platform-section .primary-button:hover {
   background-color: var(--primary-accent);
 }
 
-/* GRAPHIC GRID */
+/* GRAPHIC GRID SECTION */
+
 .graphic-section {
   width: 100%;
   display: flex;
   justify-content: center;
   background-color: var(--bg-light);
 }
-
 .graphic-grid {
   display: grid;
   grid-template-areas:
@@ -392,7 +398,6 @@ a:hover {
   width: 100%;
   box-shadow: var(--standard-box-shadow);
 }
-
 #slack-invoice {
   grid-area: slack;
   width: 100%;
@@ -404,14 +409,13 @@ a:hover {
   width: 100%;
   box-shadow: var(--standard-box-shadow);
 }
-
 #dash {
   grid-area: dash;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
 }
 
-/* Integration Section Styles */
+/* INTEGRATIONS SEECTION STYLES */
 .integrations-section {
   color: var(--text-light);
   /* background-color: var(--primary-accent); */
@@ -435,12 +439,22 @@ a:hover {
   transform: skewY(-10deg);
 }
 
+.integrations-section::after {
+  content: "";
+  background-color: var(--bg-light);
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
+}
+
 .integrations-section .primary-button {
   background-color: var(--blue-1);
   color: var(--primary-accent);
   margin: var(--spacing-md) 0 0 0;
 }
-
 .integrations-section .primary-button:hover {
   background-color: var(--bg-white);
 }
@@ -470,13 +484,13 @@ a:hover {
 }
 
 /* WHY SWIPE SECTION */
+
 .why-swipe-section {
   width: 100%;
   display: flex;
   justify-content: center;
   padding: calc(var(--spacing-xl) * 3) 0;
 }
-
 .why-swipe-section .card-container {
   display: flex;
   margin: var(--spacing-lg) 0;
@@ -495,7 +509,6 @@ a:hover {
 
 /* GLOBAL SECTION */
 .global-section {
-  /* background-color: var(--primary-accent); */
   width: 100%;
   display: flex;
   justify-content: center;
@@ -519,7 +532,6 @@ a:hover {
 .global-section a {
   color: var(--blue-1);
 }
-
 .global-section a:hover {
   color: var(--text-light);
 }
@@ -528,7 +540,6 @@ a:hover {
   display: flex;
   margin: calc(var(--spacing-xl) * 2) 0;
 }
-
 .global-section .card-container .card {
   width: 25%;
   box-sizing: border-box;
@@ -548,15 +559,13 @@ a:hover {
   position: absolute;
   top: 10%;
 }
-
-/* Virtual events section */
+/* VIRTUAL EVENTS SECTION */
 .virtual-events-section {
   display: flex;
   justify-content: center;
   padding: calc(var(--spacing-xl) * 2) 0;
   position: relative;
 }
-
 .virtual-events-section::before {
   content: "";
   background-color: var(--bg-white);
@@ -571,7 +580,6 @@ a:hover {
   background-color: var(--purple-1);
   margin: var(--spacing-md) 0 0 0;
 }
-
 .virtual-events-section .primary-button:hover {
   background-color: var(--primary-accent);
 }
@@ -590,14 +598,13 @@ a:hover {
 }
 
 .swipe-sessions-card .card-top {
-  background-color: var(--purple-1);
   width: 100%;
   height: 50%;
   display: flex;
-  /* transform: rotate(10deg); */
   justify-content: center;
   align-items: center;
   position: relative;
+  /* transform: rotate(10deg); */
 }
 
 .swipe-sessions-card .card-top::before {
@@ -606,8 +613,8 @@ a:hover {
   width: 100%;
   height: 150%;
   position: absolute;
-  transform: skewY(-5deg);
   top: -40%;
+  transform: skewY(-5deg);
   z-index: 1;
 }
 
@@ -640,15 +647,14 @@ a:hover {
   box-sizing: border-box;
   padding: var(--spacing-xl);
 }
-
 .virtual-events-section .card-bottom .subtitle {
   margin: var(--spacing-lg) 0 0 0;
 }
 
 .virtual-events-section .card-bottom .secondary-text {
   color: var(--text-dark);
-  width: 50%;
   font-weight: 700;
+  width: 50%;
 }
 
 /* GETTING STARTED SECTION */
@@ -662,7 +668,6 @@ a:hover {
   background-color: var(--purple-1);
   margin: var(--spacing-md) 0;
 }
-
 .getting-started-section .primary-button:hover {
   background-color: var(--primary-accent);
 }
@@ -688,6 +693,7 @@ a:hover {
 }
 
 /* FOOTER STYLES */
+
 .footer {
   display: flex;
   justify-content: center;
@@ -701,7 +707,6 @@ a:hover {
 }
 
 .footer .section-container {
-  width: 100%;
   display: flex;
 }
 
