--- a/index.css
+++ b/index.css
@@ -747,3 +747,47 @@ p {
   font-size: var(--h6-size);
   font-weight: 700;
 }
+
+/* TABLET SIZE */
+@media only screen and (max-width: 678px) {
+  body {
+    background-color: purple;
+  }
+}
+
+/* MOBILE SIZE */
+@media only screen and (max-width: 550px) {
+  body {
+    background-color: cyan;
+  }
+}
+
+@media only screen and (max-width: 1144px) {
+  .section-container {
+    padding: 0 var(--spacing-md);
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .partners-grid img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+/* TABLET SIZE */
+@media only screen and (max-width: 768px) {
+  :root {
+    --h1-size: 64px;
+    --h1-height: 72px;
+    --h3-size: 34px;
+
+    .partners-grid {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
+/* MOBILE SIZE */
+@media only screen and (max-width: 550px) {
+}
