--- a/index.css
+++ b/index.css
@@ -812,6 +812,18 @@ p {
     width: 50%;
     margin: var(--spacing-md) 0;
   }
+
+  /* GLOBAL SCALE SECTION */
+
+  .global-section .card-container {
+    flex-wrap: wrap;
+    margin: var(--spacing-xl) 0;
+  }
+
+  .global-section .card-container .card {
+    width: 50%;
+    margin: var(--spacing-md) 0;
+  }
 }
 
 /* MOBILE SIZE */
@@ -851,6 +863,17 @@ p {
 
   .why-swipe-section .card-container .card .icon {
     height: 35px;
+  }
+
+  /* GLOBAL SECTION */
+
+  .global-section .card-container .card {
+    width: 100%;
+    margin: var(--spacing-sm) 0;
+  }
+
+  #globe {
+    opacity: 10%;
   }
 }
 
