background stripe responsive

--- a/index.css
+++ b/index.css
@@ -890,6 +890,11 @@ p {
   }
 
   /* WHY SWIPE */
+
+  .why-swipe-section {
+    padding: var(--spacing-md) 0 var(--spacing-xl) 0;
+  }
+
   .why-swipe-section .card-container {
     flex-wrap: wrap;
   }
@@ -971,16 +976,33 @@ p {
   }
 
   /* UNIFIED PLATFORM */
+  .unified-platform-section {
+    padding: var(--spacing-md) 0;
+  }
+
   .unified-platform-section h2 {
     width: 100%;
   }
 
   /* INTEGRATION SECTION */
+  .integrations-section {
+    padding: var(--spacing-lg) 0;
+  }
+
+  .integrations-section::before {
+    height: 900px;
+  }
+
   .integrations-section .col-right {
     display: none;
   }
 
   /* WHY SWIPE */
+
+  .why-swipe-section {
+    padding: var(--spacing-xl) 0 var(--spacing-lg) 0;
+  }
+
   .why-swipe-section .card-container .card {
     width: 100%;
     margin: var(--spacing-sm) 0;
@@ -991,6 +1013,13 @@ p {
   }
 
   /* GLOBAL SECTION */
+  .global-section {
+    padding: var(--spacing-xl) 0 0 0;
+  }
+
+  .global-section .card-container {
+    margin: var(--spacing-md) 0;
+  }
 
   .global-section .card-container .card {
     width: 100%;
@@ -1002,6 +1031,10 @@ p {
   }
 
   /* VIRTUAL EVENTS SECTION */
+  .virtual-events-section {
+    padding: 0;
+  }
+
   .virtual-events-section .swipe-sessions-card {
     margin: var(--spacing-lg) 0;
     width: 100%;
@@ -1017,6 +1050,11 @@ p {
 
   #sessions-logo {
     width: 300px;
+  }
+
+  /* GETTING STARTED */
+  .getting-started-section {
+    padding: var(--spacing-md) 0;
   }
 
   .footer .section-container {
