--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
+/* VARIABLES */
 :root {
+  /* TEXT VARIABLES */
   --text-dark: #000;
   --text-light: #fff;
   --text-grey: #adbdcc;
@@ -19,14 +21,13 @@
   --secondary-text-size: 14px;
   --secondary-text-height: 18px;
   --button-size: 16px;
-  /* SPACING */
+  /* SPACING VARIABLES*/
   --spacing-sm: 8px;
   --spacing-md: 16px;
   --spacing-lg: 32px;
   --spacing-xl: 64px;
-
   --standard-width: 1144px;
-
+  /* COLOR VARIABLES */
   --purple-1: #6962f7;
   --purple-2: #7000ff;
   --blue-1: #00d4ff;
@@ -45,10 +46,18 @@
   );
 }
 
+/* GENERAL ELEMENT STYLES */
+
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--body-font);
   color: var(--text-dark);
-  width: 100%;
   margin: 0;
   box-sizing: border-box;
   padding: var(--spacing-sm) 0 0 0;
@@ -203,6 +212,7 @@ p {
   letter-spacing: 0.25px;
 }
 
+/* BUTTON STYLES */
 .primary-button {
   font-family: var(--body-font);
   font-size: var(--button-size);
@@ -290,7 +300,7 @@ p {
   display: none;
 }
 
-/* ANIMATED GRADIENT  */
+/* ANIMATED GRADIENT  BACKGROUND*/
 
 #gradient-canvas {
   width: 200%;
@@ -308,16 +318,6 @@ p {
 
 /* HERO STYLES */
 
-.button-container {
-  display: flex;
-  margin: var(--spacing-md) 0;
-}
-
-.button-container button:nth-of-type(2) {
-  margin: 0 0 0 var(--spacing-md);
-  color: var(--purple-2);
-}
-
 .hero {
   width: 100%;
   display: flex;
@@ -328,14 +328,24 @@ p {
   max-width: 480px;
 }
 
-.hero .hero-phone-container {
-  height: 564px;
-  align-items: flex-end;
-}
-
 .hero-phone {
   height: 628px;
   transform: translate(32px, -32px);
+}
+
+.button-container {
+  display: flex;
+  margin: var(--spacing-md) 0;
+}
+
+.button-container button:nth-of-type(2) {
+  margin: 0 0 0 var(--spacing-md);
+  color: var(--purple-2);
+}
+
+.hero .hero-phone-container {
+  height: 564px;
+  align-items: flex-end;
 }
 
 /* Partners Section */
@@ -357,6 +367,7 @@ p {
   height: 60px;
   place-self: center;
 }
+
 /* UNIFIED PLATFORM SECTION */
 
 .unified-platform-section {
@@ -376,6 +387,7 @@ p {
   background-color: var(--purple-1);
   margin: var(--spacing-md) 0;
 }
+
 .unified-platform-section .primary-button:hover {
   background-color: var(--primary-accent);
 }
@@ -388,6 +400,7 @@ p {
   justify-content: center;
   background-color: var(--bg-light);
 }
+
 .graphic-grid {
   display: grid;
   grid-template-areas:
@@ -403,6 +416,7 @@ p {
   width: 100%;
   box-shadow: var(--standard-box-shadow);
 }
+
 #slack-invoice {
   grid-area: slack;
   width: 100%;
@@ -414,6 +428,7 @@ p {
   width: 100%;
   box-shadow: var(--standard-box-shadow);
 }
+
 #dash {
   grid-area: dash;
   width: 100%;
@@ -423,7 +438,6 @@ p {
 /* INTEGRATIONS SEECTION STYLES */
 .integrations-section {
   color: var(--text-light);
-  /* background-color: var(--primary-accent); */
   width: 100%;
   display: flex;
   justify-content: center;
@@ -460,8 +474,13 @@ p {
   color: var(--primary-accent);
   margin: var(--spacing-md) 0 0 0;
 }
+
 .integrations-section .primary-button:hover {
   background-color: var(--bg-white);
+}
+
+.integrations-section .secondary-button {
+  color: var(--blue-1);
 }
 
 .integrations-section .card-container {
@@ -471,10 +490,6 @@ p {
 
 .integrations-section .card-container .card {
   width: 50%;
-}
-
-.integrations-section .secondary-button {
-  color: var(--blue-1);
 }
 
 #api-code {
@@ -496,6 +511,7 @@ p {
   justify-content: center;
   padding: calc(var(--spacing-xl) * 3) 0;
 }
+
 .why-swipe-section .card-container {
   display: flex;
   margin: var(--spacing-lg) 0;
@@ -537,6 +553,7 @@ p {
 .global-section a {
   color: var(--blue-1);
 }
+
 .global-section a:hover {
   color: var(--text-light);
 }
@@ -545,6 +562,7 @@ p {
   display: flex;
   margin: calc(var(--spacing-xl) * 2) 0;
 }
+
 .global-section .card-container .card {
   width: 25%;
   box-sizing: border-box;
@@ -564,6 +582,7 @@ p {
   position: absolute;
   top: 10%;
 }
+
 /* VIRTUAL EVENTS SECTION */
 .virtual-events-section {
   display: flex;
@@ -571,6 +590,7 @@ p {
   padding: calc(var(--spacing-xl) * 2) 0;
   position: relative;
 }
+
 .virtual-events-section::before {
   content: "";
   background-color: var(--bg-white);
@@ -585,6 +605,7 @@ p {
   background-color: var(--purple-1);
   margin: var(--spacing-md) 0 0 0;
 }
+
 .virtual-events-section .primary-button:hover {
   background-color: var(--primary-accent);
 }
@@ -609,7 +630,6 @@ p {
   justify-content: center;
   align-items: center;
   position: relative;
-  /* transform: rotate(10deg); */
 }
 
 .swipe-sessions-card .card-top::before {
@@ -633,8 +653,6 @@ p {
   bottom: -70px;
   left: var(--spacing-xl);
   z-index: 3;
-  /* width: 140px;
-  height: 80px; */
 }
 
 .virtual-events-section .avatars img {
@@ -673,6 +691,7 @@ p {
   background-color: var(--purple-1);
   margin: var(--spacing-md) 0;
 }
+
 .getting-started-section .primary-button:hover {
   background-color: var(--primary-accent);
 }
@@ -706,13 +725,13 @@ p {
   padding: var(--spacing-xl) 0;
 }
 
+.footer .section-container {
+  display: flex;
+}
+
 #footer-logo {
   max-width: 108px;
   margin: 0 0 var(--spacing-md) 0;
-}
-
-.footer .section-container {
-  display: flex;
 }
 
 .footer .col {
@@ -753,15 +772,19 @@ p {
   font-weight: 700;
 }
 
+/* CUSTOM BREAKPOINT */
 @media only screen and (max-width: 1144px) {
-  .section-container {
-    padding: 0 var(--spacing-md);
-  }
-
   :root {
     --h1-size: 80px;
     --h1-height: 85px;
   }
+
+  /* GENERAL LAYOUT */
+  .section-container {
+    padding: 0 var(--spacing-md);
+  }
+
+  /* HERO SECTION */
 
   .hero-phone {
     height: 550px;
@@ -777,6 +800,7 @@ p {
   }
 }
 
+/* CUSTOM BREAKPOINT (850px) */
 @media only screen and (max-width: 850px) {
   :root {
     --h1-size: 70px;
@@ -844,7 +868,7 @@ p {
     --h6-size: 16px;
   }
 
-  /* HERO STYLES */
+  /* NAVBAR STYLES */
   .navbar {
     margin: 0;
   }
@@ -875,7 +899,7 @@ p {
     transform: translateX(32px);
   }
 
-  /* UNIFIED PLATFORM */
+  /* UNIFIED PLATFORM SECTION*/
   .unified-platform-section h2 {
     width: 100%;
   }
@@ -889,7 +913,7 @@ p {
     width: 100%;
   }
 
-  /* WHY SWIPE */
+  /* WHY SWIPE SECTION*/
 
   .why-swipe-section {
     padding: var(--spacing-md) 0 var(--spacing-xl) 0;
@@ -904,7 +928,7 @@ p {
     margin: var(--spacing-md) 0;
   }
 
-  /* GLOBAL SCALE SECTION */
+  /* GLOBAL SECTION */
 
   .getting-started-section .two-column {
     align-items: center;
@@ -931,7 +955,7 @@ p {
   }
 }
 
-/* MOBILE SIZE */
+/* MOBILE SIZE BREAKPOINT*/
 @media only screen and (max-width: 550px) {
   :root {
     --h1-size: 58px;
@@ -970,6 +994,8 @@ p {
   .hero .two-column .hero-phone-container {
     display: none;
   }
+
+  /* PARTNERS GRID */
 
   .partners-grid {
     grid-template-columns: 1fr 1fr;
@@ -1057,6 +1083,7 @@ p {
     padding: var(--spacing-md) 0;
   }
 
+  /* FOOTER STYLES */
   .footer .section-container {
     flex-wrap: wrap;
   }
@@ -1077,11 +1104,4 @@ p {
   .footer .icon-link img {
     width: 18px;
   }
-}
-
-html,
-body {
-  width: 100%;
-  position: relative;
-  overflow-x: hidden;
 }
