--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@
   --bg-white: #fff;
   --bg-light: #f7f9fc;
 
+  --standard-border-radius: 20px;
   --standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
   --primary-gradient: linear-gradient(
     101.33deg,
@@ -218,7 +219,7 @@ p {
   font-size: var(--button-size);
   letter-spacing: 1.25px;
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   border: none;
   background-color: var(--primary-accent);
   color: var(--text-light);
@@ -235,7 +236,7 @@ p {
   font-size: var(--button-size);
   letter-spacing: 1.25px;
   font-weight: bold;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   border: none;
   background-color: transparent;
   color: var(--primary-accent);
@@ -415,24 +416,26 @@ p {
   grid-area: card;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 
 #slack-invoice {
   grid-area: slack;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 
 #phone {
   grid-area: phone;
   width: 100%;
-  box-shadow: var(--standard-box-shadow);
 }
 
 #dash {
   grid-area: dash;
   width: 100%;
   box-shadow: var(--standard-box-shadow);
+  border-radius: var(--standard-border-radius);
 }
 
 /* INTEGRATIONS SEECTION STYLES */
@@ -495,12 +498,12 @@ p {
 #api-code {
   max-width: 470px;
   margin: 0 0 var(--spacing-md) 0;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
 }
 
 #terminal-code {
   max-width: 470px;
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
 }
 
 /* WHY SWIPE SECTION */
@@ -619,7 +622,7 @@ p {
   width: 540px;
   height: 446px;
   box-shadow: var(--standard-box-shadow);
-  border-radius: 20px;
+  border-radius: var(--standard-border-radius);
   overflow: hidden;
 }
 
@@ -798,6 +801,12 @@ p {
   .hero .col-right {
     width: 40%;
   }
+
+  /* PARTNERS SECTION */
+
+  .partners-grid {
+    margin: 0 0 var(--spacing-xl) 0;
+  }
 }
 
 /* CUSTOM BREAKPOINT (850px) */
@@ -824,7 +833,7 @@ p {
     width: 50px;
     height: 30px;
     background-color: rgba(250, 250, 250, 0.25);
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -897,6 +906,11 @@ p {
   .hero-phone {
     height: 450px;
     transform: translateX(32px);
+  }
+
+  /* PARTNERS SECTION */
+  .partners-section {
+    margin-top: -60px 0 0 0;
   }
 
   /* UNIFIED PLATFORM SECTION*/
@@ -995,7 +1009,10 @@ p {
     display: none;
   }
 
-  /* PARTNERS GRID */
+  /* PARTNERS SECTION */
+  .partners-section {
+    margin: var(--spacing-xl) 0 var(--spacing-sm) 0;
+  }
 
   .partners-grid {
     grid-template-columns: 1fr 1fr;
